[tool.poetry]
name = "mds"
version = "4.0.5"
description = "Metadata Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9.2, <3.10"
fastapi = "*"
uvicorn = {extras = ["standard"], version="^0.18.2"}
gunicorn = ">=22.0.0"
gino = {version = "^1.0.0", extras = ["starlette"]}
# restricting sqlalchemy for gino https://github.com/python-gino/gino/discussions/765'
sqlalchemy = "^1.3.0, <1.4"
psycopg2-binary = "^2.8"
alembic = "^1.3"
gen3authz = "^2.0"
httpx = "^0.23.0"
authutils = ">=6.2.7"
cdislogging = "^1.0"
pyyaml = "^6.0"
setuptools = "*"
dataclasses-json = "==0.5.*,>=0.5.2"
jsonpath-ng = "==1.5.3"
elasticsearch = "==7.10.*"
bleach = ">=3.3.1"
tenacity = ">=8.0.0"
pathvalidate = "^3.2.0"
importlib-metadata = "^6.8.0"
starlette = "^0.48.0"
asyncpg = "0.30.0"
pydantic = "2.9.2"
xmltodict = "0.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
pyyaml = "*"
requests = "^2.32"
respx = "*"
nest-asyncio = "^1.5.1"
deptry = "^0.23.1"
pytest-asyncio = "^0.15.1"

[tool.poetry.plugins."mds.modules"]
"query" = "mds.query"
"maintain" = "mds.maintain"
"index" = "mds.index"
"objects" = "mds.objects"
"agg_mds" = "mds.agg_mds"
"aliases" = "mds.aliases"

[build-system]
requires = ["poetry>=2.0"]
build-backend = "poetry.masonry.api"
