[tool.poetry]
name = "mds"
version = "4.1.0"
description = "Metadata Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "*"
uvicorn = {extras = ["standard"], version="^0.30.0"}
gunicorn = ">=22.0.0"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
psycopg2-binary = "^2.8"
alembic = "^1.13"
gen3authz = "^2.0"
httpx = "^0.23.0"
authutils = ">=7.1.1"
cdislogging = "^1.0"
pyyaml = "^6.0"
setuptools = "*"
dataclasses-json = "==0.5.*,>=0.5.2"
jsonpath-ng = "==1.5.3"
elasticsearch = "==7.10.*"
bleach = ">=3.3.1"
tenacity = ">=8.0.0"
pathvalidate = "^3.2.0"
importlib-metadata = "^6.8.0"
starlette = "^0.49.3"
asyncpg = "0.30.0"
pydantic = "2.9.2"
xmltodict = "0.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pyyaml = "*"
requests = "^2.32"
respx = "*"
nest-asyncio = "^1.5.1"
deptry = "^0.23.1"
pytest-asyncio = "^0.23.0"

[tool.poetry.plugins."mds.modules"]
"query" = "mds.query"
"maintain" = "mds.maintain"
"index" = "mds.index"
"objects" = "mds.objects"
"agg_mds" = "mds.agg_mds"
"aliases" = "mds.aliases"

[build-system]
requires = ["poetry>=2.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
